correct alignment

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     background-color: white;
     display: flex;
-    justify-content: center;
     align-items: center;
 }
 
@@ -11,6 +10,7 @@ body{
     padding:20px;
     border: 5px black;
     width: 400px;
+    margin: 0 auto;
 }
 
 h1,h2{
